-XX:MaxPermSize=256m is not recognized on jdk-17 and 21