@@ -1,7 +1,6 @@
 -Xms2G
 -Xmx4G
 -XshowSettings:vm
--XX:MaxPermSize=256m
 -XX:-TieredCompilation
 -XX:TieredStopAtLevel=1
 -XX:+CMSClassUnloadingEnabled
